# hex-dump

./: .gitignore  CMakeLists.txt  README.md  aho_corasick.cpp  aho_corasick.hpp  cli.cpp  file_signatures_subset.csv  filtered_signatures.csv  makefile
.cache/clangd/index/: aho_corasick.cpp.B3948E4159EB548E.idx  aho_corasick.hpp.9E66F00CC4BF1631.idx  cli.cpp.6BFAD8FF06A14178.idx  cli.hpp.1686D85328A9155A.idx
include/: aho_corasick.hpp  cli.hpp  mapped_file.hpp  signature.hpp  validator.hpp
misc/: common_signatures.csv
src/: aho_corasick.cpp  cli.cpp  main.cpp  mapped_file.cpp  validator.cpp
